Refactor, tweaks