@@ -1,9 +1,9 @@
-package dev.sefiraat.netheopoiesis.slimefun.flora.seeds.implementation.first;
+package dev.sefiraat.netheopoiesis.slimefun.flora.seeds.second;
 
 import dev.sefiraat.netheopoiesis.slimefun.NpsSlimefunItemStacks;
+import dev.sefiraat.netheopoiesis.slimefun.NpsSlimefunItems;
 import dev.sefiraat.netheopoiesis.slimefun.flora.blocks.NetherSeedCrux;
 import dev.sefiraat.netheopoiesis.slimefun.flora.seeds.NetherSeed;
-import dev.sefiraat.netheopoiesis.utils.Keys;
 import dev.sefiraat.netheopoiesis.utils.Skulls;
 import dev.sefiraat.netheopoiesis.utils.Theme;
 import io.github.thebusybiscuit.slimefun4.api.items.ItemGroup;
@@ -13,37 +13,26 @@ import io.github.thebusybiscuit.slimefun4.api.recipes.RecipeType;
 import me.mrCookieSlime.CSCoreLibPlugin.Configuration.Config;
 import me.mrCookieSlime.Slimefun.api.BlockStorage;
 import org.bukkit.Location;
-import org.bukkit.Material;
-import org.bukkit.World;
 import org.bukkit.block.Block;
-import org.bukkit.block.BlockFace;
-import org.bukkit.event.block.BlockPlaceEvent;
 import org.bukkit.inventory.ItemStack;
 
 import javax.annotation.Nonnull;
 import javax.annotation.ParametersAreNonnullByDefault;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.concurrent.ThreadLocalRandom;
 
-public class PurificationSeed extends NetherSeed {
+public class SoulSeed extends NetherSeed {
 
-    private final Set<Material> materials;
     private final List<Skulls> growthPhases = new ArrayList<>();
 
-    public PurificationSeed(@Nonnull ItemGroup itemGroup,
-                            @Nonnull SlimefunItemStack item,
-                            @Nonnull RecipeType recipeType,
-                            @Nonnull ItemStack[] recipe
+    public SoulSeed(@Nonnull ItemGroup itemGroup,
+                    @Nonnull SlimefunItemStack item,
+                    @Nonnull RecipeType recipeType,
+                    @Nonnull ItemStack[] recipe
     ) {
         super(itemGroup, item, recipeType, recipe);
-        materials = Set.of(
-            Material.NETHERRACK,
-            Material.CRIMSON_NYLIUM,
-            Material.WARPED_NYLIUM
-        );
         growthPhases.add(Skulls.SEED_BLUE);
         growthPhases.add(Skulls.PLANT_VINES_GROWTH_1);
         growthPhases.add(Skulls.PLANT_VINES_GROWTH_2);
@@ -56,15 +45,16 @@ public class PurificationSeed extends NetherSeed {
     @ParametersAreNonnullByDefault
     public void onTickFullyGrown(Location location, NetherSeed seed, Config data) {
         double randomChance = ThreadLocalRandom.current().nextDouble();
-        if (randomChance <= 0.15) {
+        if (randomChance <= 0.1) {
             final double randomX = ThreadLocalRandom.current().nextInt(-3, 4);
             final double randomZ = ThreadLocalRandom.current().nextInt(-3, 4);
             // For loop to make sure the purification can creep up and down.
             for (int i = -1; i < 2; i++) {
                 final Block block = location.clone().add(randomX, i, randomZ).getBlock();
-                if (materials.contains(block.getType())) {
-                    block.setType(NpsSlimefunItemStacks.BASIC_PURIFIED_NETHERRACK.getType());
-                    BlockStorage.store(block, NpsSlimefunItemStacks.BASIC_PURIFIED_NETHERRACK.getItemId());
+                final SlimefunItem possibleCrux = BlockStorage.check(block);
+                if (possibleCrux instanceof NetherSeedCrux crux && getValidPlaces().contains(crux)) {
+                    block.setType(NpsSlimefunItemStacks.PURIFIED_NETHERRACK.getType());
+                    BlockStorage.store(block, NpsSlimefunItemStacks.PURIFIED_NETHERRACK.getItemId());
                     // Return so we only effect the one block per valid tick
                     return;
                 }
@@ -78,32 +68,21 @@ public class PurificationSeed extends NetherSeed {
         return Theme.SEED_BLUE;
     }
 
-    @Override
-    public void whenPlaced(@Nonnull BlockPlaceEvent event) {
-        // We override this as this is the only one able to be placed on both vanilla and crux'
-        final Block block = event.getBlock();
-        final Block blockBelow = block.getRelative(BlockFace.DOWN);
-        final SlimefunItem possibleCrux = BlockStorage.check(blockBelow);
-        final Location location = block.getLocation();
-        if (location.getWorld().getEnvironment() == World.Environment.NETHER
-            && (materials.contains(blockBelow.getType()) || possibleCrux instanceof NetherSeedCrux)
-        ) {
-            BlockStorage.addBlockInfo(location, Keys.SEED_GROWTH_STAGE, "0");
-        } else {
-            event.setCancelled(true);
-        }
-    }
-
     @Nonnull
     @Override
     public Set<NetherSeedCrux> getValidPlaces() {
-        // Purification is the odd one out as it has to be on a vanilla block to begin the cycle
-        return Collections.emptySet();
+        return Set.of(
+            NpsSlimefunItems.BASIC_PURIFIED_NETHERRACK,
+            NpsSlimefunItems.PURIFIED_NETHERRACK,
+            NpsSlimefunItems.VORACIOUS_DIRT,
+            NpsSlimefunItems.NETHER_DIRT,
+            NpsSlimefunItems.NETHER_GRASS
+        );
     }
 
     @Override
     public double getGrowthRate() {
-        return 0.15;
+        return 0.7;
     }
 
     @Override
@@ -113,6 +92,6 @@ public class PurificationSeed extends NetherSeed {
 
     @Override
     public int purificationValue() {
-        return 1;
+        return 2;
     }
 }
